--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
